--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
     "require": {
         "php": ">=5.3.0",
         "legrand/sparql": "dev-master",
-        "illuminate/support": "4.0.*@dev"
+        "illuminate/support": "4.0.*@dev",
+        "illuminate/config": "4.0.*@dev"
     },
     "autoload": {
         "psr-0": {"Legrand": "src/"}
-    }
+    },
+    "minimum-stability": "dev"
 }
