--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require": {
         "php": ">=5.3.0",
         "legrand/sparql": "dev-master",
-        "illuminate/support": "4.0.*@dev",
-        "illuminate/config": "4.0.*@dev"
+        "laravel/framework": "4.0.*"
     },
     "autoload": {
         "psr-0": {"Legrand": "src/"}
